--- a/laborbericht.tex
+++ b/laborbericht.tex
@@ -6,7 +6,7 @@
 \usepackage{ae,aecompl}
 \usepackage[T1]{fontenc}
 \usepackage{ngerman}
-\usepackage{fleqn}
+%\usepackage{fleqn}
 \usepackage{ulem}
 \usepackage{amssymb}
 \usepackage[locale=DE, per-mode=fraction, quotient-mode=fraction, group-minimum-digits=6]{siunitx}
@@ -31,7 +31,6 @@
 \usepackage{amsmath}
 \usepackage{autonum}
 
-%testüäöÜÄÖ
 
 \setlength{\headheight}{15pt}
 \pagestyle{fancy}
@@ -121,8 +120,8 @@
 	würde zusätzlich ca. \SI{1}{\volt} abfallen.
 
 \subsection{Formeln}
-	Betrag der elektrischen Feldstärke:\\
-	\[E=\frac{\text{Potentialdifferenz}\Delta\varphi}{\text{Abstand der Potentiallinien}\Delta s}\]
+	Betrag der elektrischen Feldstärke:
+	\[E=\frac{\text{Potentialdifferenz }\Delta\varphi}{\text{Abstand der Potentiallinien }\Delta s}\]
 
 \newpage
 \section{Material und Methoden}
@@ -162,135 +161,54 @@
 	Nachdem der Versuch aufgebaut wurde, wurden mit der Messspitze Äquipotentiallinien im elektrischen Feld gesucht. Diese 
 	Äquipotentiallinien wurden auf Millimeterpapier übertragen, die Spannung betrug hier dabei \SI{2}{\volt}, \SI{3}{\volt},
 	\SI{4}{\volt}, \SI{5}{\volt}, \SI{6}{\volt}, \SI{7}{\volt} und \SI{8}{\volt}.\\
-	Anschließend wurden die Magnetfeldlinien 
-	eingezeichnet, und der Versuch mit einem, sich im elektrolytischem Trog befindenden, Metallring wiederholt.
+	Anschließend wurden die Magnetfeldlinien eingezeichnet und es wurde die Feldstärke $E$ für drei Punkte berechnet.
+	Der Versuch wurde daraufhin mit einem, sich im elektrolytischem Trog befindenden, Metallring wiederholt.
 
 
 \newpage
 \section{Messwerte}
-	Orginal Laboraufschriebe siehe Anhang.
-	
+	In Abbildung \ref{fig:Diagramm1} sind die Messpunkte und die Äquipotentiallinien für \SI{2}{\volt} (schwarz), \SI{3}{\volt} (pink),
+	\SI{4}{\volt} (blau), \SI{5}{\volt} (hellgrün), \SI{6}{\volt} (rot), \SI{7}{\volt} (lila) und \SI{8}{\volt} (orange) eingezeichnet.
+	Dazu wurden außerdem die magnetischen Feldlinien (dunkelgrün) eingezeichnet, die zwischen den beiden Kondensatorplatten,
+	beim Anlegen einer Spannung, entstehen.\\
+	In Abbildung \ref{fig:Diagramm2} sind ebenfalls die Messpunkte, Äquipotentiallinien und Feldlinien eingezeichnet, die Farben entsprechen
+	den aus Abbildung \ref{fig:Diagramm1}. Hinzu kommt in Abbildung \ref{fig:Diagramm2} der Metallring, der im Inneren des Rings
+	eine Äquipotentialfläche besaß, deren Spannung \SI{4.3}{\volt} betrug. Der Metallring selbst ist ebenfalls eine Äquipotentiallinie,
+	dessen Spannung \SI{4.7}{\volt} betrug.
+			
 
 	
 	\begin{figure}
-	\input{messwerte1}
+		\input{messwerte1}
 	\end{figure}
 
 	\begin{figure}
-	\input{messwerte2}
+		\input{messwerte2}
 	\end{figure}
 
 	
 
 \newpage
 \section{Auswertung}
-	\subsection{Verhältnis $\frac{t}{t^{\ast}}$}
-	\begin{table}[h!]
-	\centering
-	\begin{tabular}{c|c}
-		Messung 						& Verhältnis $\frac{t}{t^{\ast}}$	\\ \hline
-		1							& 1,18						\\ \hline
-		2							& 1,49						\\ \hline
-		3							& 1,17						\\ \hline
-		4							& 1,51						\\ \hline
-		5							& 1,48						\\ \hline
-		6							& 1,63						\\ \hline
-		7							& 1,56						\\ \hline
-		8							& 1,45						\\ \hline
-		9							& 1,40						\\ \hline
-		10							& 1,47						\\ \hline
-		$\bf\overline{\frac{t}{t^{\ast}}}$	& $\bf1,43$
-	\end{tabular}
-	\caption{Verhältnis $\frac{t}{t^{\ast}}$}
-	\label{tab:tzut*}
-	\end{table}
-
+	\subsection{Betrag der elektrischen Feldstärke $E$}
+	Die benötigte Formel zu Berechnung der elektrischen Feldstärke $E$ lautet:
+	\[E=\frac{\text{Potentialdifferenz }\Delta\varphi}{\text{Abstand der Potentiallinien }\Delta s}\] 
 	
-	Das theoretische Verhältnis für $\frac{t}{t^{\ast}}$ beträgt:$\sqrt{2}$
-		\begin{align}
-			s &= \frac{1}{2} \cdot a \cdot t^2 &\Rightarrow t &=\sqrt{\frac{2s}{a}}\\
-			 t^{\ast} &=\sqrt{\frac{2 \cdot \frac{1}{2} \cdot s}{a}} &\Rightarrow  t^{\ast} &= \sqrt{\frac{s}{a}}	\\
-			\frac{t}{t^{\ast}} &= \frac{\sqrt{\frac{2s}{a}}}{\sqrt{\frac{s}{a}}}\\
-			\frac{t}{t^{\ast}} &= \sqrt{2}		\\
-			\frac{t}{t^{\ast}} &\approx \num{1.414}
-		\end{align}
-	Der aus den Messwerten ermittelte Quotient ist dem theoretischen sehr ähnlich, die Differenz des gemessenen und des 
-	theoretischen Wertes beträgt nur $1,43-\sqrt{2}\approx 0,016$.
+	\subsubsection{Messreihe 1}
+	Punkt $P_1 \left(\num{1.8} \mid 2\right)$,  Punkt $P_2 \left(\num{5,5} \mid \num{4,4}\right)$, Punkt $P_3 \left(\num{9.6} \mid 8\right)$:
+		\[E_{P_1} = \frac{\SI{10}{\volt}}{\SI{0,11}{\metre}} = \SI{90,9091}{\volt \per \meter}\] 
+		\[E_{P_2} = \frac{\SI{10}{\volt}}{\SI{0.115}{\metre}} = \SI{86,9565}{\volt \per \meter}\]
+		\[E_{P_3} = \frac{\SI{10}{\volt}}{\SI{0.12}{\metre}} = \SI{83,3333}{\volt \per \meter}\]
+	
 
+	\subsubsection{Messreihe 2}
+	Punkt $P_1 \left(\num{1,3} \mid \num{5,5}\right)$,  Punkt $P_2 \left(\num{6.2} \mid \num{1,35}\right)$, Punkt $P_3 \left(\num{7.38} \mid \num{-2,05}\right)$:
+		\[E_{P_1} = \frac{\SI{10}{\volt}}{\SI{0,12}{\metre}} = \SI{83,3333}{\volt \per \meter}\] 
+		\[E_{P_2} = \frac{\SI{10}{\volt}}{\SI{0.11}{\metre}} = \SI{90,9091}{\volt \per \meter}\]
+		\[E_{P_3} = \frac{\SI{10}{\volt}}{\SI{0.11}{\metre}} = \SI{90,9091}{\volt \per \meter}\]
 
-\newpage
-	\subsection{Diagramm $t(\alpha)$}
-	%\begin{figure}[h!]
-	%\begin{tikzpicture}[xscale=2,yscale=3]
-	%	% Achsen
-	%	\draw[->] (-0.5/2,0) -- (7,0) node[below right] {$\alpha$ in \si{\degree}};
-	%	\draw[->] (0,-0.5/3) -- (0,4) node[left] {$t$ in \si{\second}};
-	%	% Achsbeschriftung
-	%	\foreach \x in {,1,...,6.5} \draw (\x,0.05) -- (\x,-0.05) node [below] {\x};
-	%	\foreach \y in {0.5,1.0,...,3.5} \draw (0.1,\y) -- (-0.1,\y) node [left] {\y};
-	%	% Funktion
-	%	\draw[red, samples=5000, domain=1.000244714:7] plot (\x, {sqrt((2*1.37)/(sin(\x )*9.81))});
-	%	%Funktionbeschriftung
-	%	\node (11) at (7 , 1.513887287) [below] {$t=\sqrt{\frac{2s}{\sin{(\alpha)}\cdot g}}$};	
-	%	% Messpunkte
-	%	\node (1) at (1.56,3.10) {\textsf{x}};
-	%	\node (2) at (2.21,2.63) {\textsf{x}};
-	%	\node (3) at (2.37,2.57) {\textsf{x}};
-	%	\node (4) at (2.62,2.37) {\textsf{x}};
-	%	\node (5) at (2.87,2.33) {\textsf{x}};
-	%	\node (6) at (3.52,2.17) {\textsf{x}};
-	%	\node (7) at (3.69,2.07) {\textsf{x}};
-	%	\node (8) at (4.01,2.03) {\textsf{x}};
-	%	\node (9) at (4.92,1.50) {\textsf{x}};
-	%	\node (10) at (5.74,1.47) {\textsf{x}};
-	%\end{tikzpicture}
-	%\caption{Diagramm: $t(\alpha)$}
-	%\label{fig:Diagramm}
-	%\end{figure}
-\noindent
-	Die abgebildete Kurve $t=\sqrt{\frac{2s}{\sin{(\alpha)}\cdot g}}$ beschreibt den Idealverlauf der Zeit, in Abhängigkeit des Winkels 
-	$\alpha$, die der Wagen benötigt, die \SI{1.37}{\metre} lange Rollbahn herunterzufahren.\\
-	Die Gleichung $t=\sqrt{\frac{2s}{\sin{(\alpha)}\cdot g}}$ kann man aus der Gleichung $s=\frac{1}{2}\cdot a\cdot t^2$ herleiten:
-	\begin{align}
-		s &= \frac{1}{2} \cdot a \cdot t^2 &\Rightarrow t &=\sqrt{\frac{2s}{a}} \label{eq:formel1} \\
-		a &= \sin{(\alpha)}\cdot g \label{eq:formel2} 
-	\end{align}	
-	\eqref{eq:formel2}\text{ in }\eqref{eq:formel1}\text{ einsetzen:}
-	\begin{align}
-		t&=\sqrt{\frac{2s}{\sin{(\alpha)}\cdot g}}
-	\end{align}
-	Aus Abbildung \ref{fig:Diagramm} ist erkennbar, dass die Messwerte, bis zu dem Winkel $\alpha=\ang{4.01}$, dem Idealverlauf
-	sehr ähnlich sind, größere Abweichungen gibt es erst ab dem Winkel $\alpha=\ang{4.92}$. Da liegt daran, dass, der Wagen, 
-	bei einem größeren Winkel eine höhere Endgeschwindigkeit aufbaut, und somit das Erreichen des Endes der Rollbahn, für das
-	menschliche Auge, schwer abschätzbar ist. 
-
-\newpage
-	\subsection{Geschwindigkeiten}
-	\begin{table}[h!]
-	\centering
-	\begin{tabular}{c|c|c}
-		Messung	& Durchschnittsgeschwindigkeit			$\overline{v}$ & Endgeschwindigkeit $v_e$	\\ \hline
-		1		& \SI{0.442}{\metre\per\second} 		& \SI{0.884}{\metre\per\second}		\\ \hline
-		2		& \SI{0.520}{\metre\per\second}		& \SI{1.040}{\metre\per\second}		\\ \hline
-		3		& \SI{0.533}{\metre\per\second}		& \SI{1.066}{\metre\per\second}		\\ \hline
-		4		& \SI{0.578}{\metre\per\second}		& \SI{1.156}{\metre\per\second}		\\ \hline
-		5		& \SI{0.588}{\metre\per\second}		& \SI{1.176}{\metre\per\second}		\\ \hline
-		6		& \SI{0.631}{\metre\per\second}		& \SI{1.262}{\metre\per\second}		\\ \hline
-		7		& \SI{0.662}{\metre\per\second}		& \SI{1.324}{\metre\per\second}		\\ \hline
-		8		& \SI{0.675}{\metre\per\second}		& \SI{1.350}{\metre\per\second}		\\ \hline
-		9		& \SI{0.913}{\metre\per\second}		& \SI{1.836}{\metre\per\second}		\\ \hline
-		10		& \SI{0.932}{\metre\per\second}		& \SI{1.864}{\metre\per\second}     
-	\end{tabular}
-	\caption{Geschwindigkeiten}
-	\label{tab:Geschwindigkeiten}
-	\end{table}
-
-\newpage
-\section{Quellen}
-	\begin{itemize}
-		\item www.lern-online.net/physik/mechanik/kinematik\\Upload: 21.09.2015 10:59 Uhr, Abgerufen: 17.10.2015 13:39 Uhr
-		\item www.fersch.de/pdfdoc/Physik.pdf\\Upload: 20. August 2015, Abgerufen: 17.10.2015 13:17 Uhr
-	\end{itemize}
+	\subsection{Beobachtung zum Metallring}
+	In dem, in Messreihe 2 hinzugelegten, Metallring befand sich eine Äquipotentialfläche von \SI{4,3}{\volt}.
 
 \end{document}
 
