--- a/messwerte1.tex
+++ b/messwerte1.tex
@@ -237,8 +237,8 @@
 			\draw [orange] plot [smooth] coordinates {(11,4) (10.2,3) (10,0) (10.15,-3) (10.5,-3.5) (11,-3.8)};
 
 		% Feldlinien
-			\draw[- ,thick ,taupe] (0,-0.75) -- (11,-0.75);
-			\draw[- ,thick ,taupe] (0,1.05) -- (11,1.05);
+			\draw[thick ,taupe] plot [smooth] coordinates {(0,3.65) (1,3.875) (2,4.1) (3,4.3) (4,4.4) (5,4.4) (6,4.4) (7,4.35) (8,4.25) (9,4.1) (10,3.875) (11,3.65)};
+			\draw[thick ,taupe] plot [smooth] coordinates {(0,5) (1,5.6) (2,6.3) (3,6.8) (4,7.15) (5,7.2) (6,7.2) (7,7.15) (8,6.8) (9,6.3) (10,5.6) (11,5)};
 			\draw[- ,thick ,taupe] (0,1.35) -- (11,1.35);
 			\draw[- ,thick ,taupe] (0,-2.85) -- (11,-2.85);
 			\draw[- ,thick ,taupe] (0,-2.05) -- (11,-2.05);
